empezando a trabajar en mostrar calif del jefe-subor

--- a/app/views/president/detalles/personal/index.html
+++ b/app/views/president/detalles/personal/index.html
@@ -104,7 +104,7 @@
 																	</div>
 
 																	<div class="col-7">
-																		<a href="/president/detalles/<%- infoEval.id %>/personal/<%- miembro[i].cedula %>" onclick="return verificarFin('<%- infoEval.fecha_f %>');"><%- miembro[i].nombre %> <%- miembro[i].apellido %></a>
+																		<a href="/president/detalles/<%- infoEval.id %>/personal/<%- miembro[i].cedula %>");"><%- miembro[i].nombre %> <%- miembro[i].apellido %></a>
 																		<hr style="margin: 1px">
 																		<p><em><%- miembro[i].cargo.nombre %></em></p>
 																	</div>
