--- a/app/views/president/detalles/personal/calificacion.html
+++ b/app/views/president/detalles/personal/calificacion.html
@@ -90,9 +90,34 @@
 											<h3>Calificación segun tipo de Evaluación</h3>
 											<hr>
 											<div>
-												<div class="row">
-													<!--Si el Usuario selccionado tiene cargo 3 (Subordinado)-->
-													<% if(User.cargoId == 3) {%>
+												<div class="row">									
+													<div class="col-md-12">
+														<div class="card">
+															<div class="card-body">
+																<div class="row">
+																	<div class="col-lg-3 col-md-4 col-sm-3">
+																		<div class="card">
+																			<div class="card-body text-center">
+																				<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-child" style="font-size: 30pt;"></i>
+																				<hr style="margin: 1px">
+																				<p><strong>AutoEvaluación</strong></p>
+																			</div>
+																		</div>
+																	</div>
+																	<div class="col-lg-9 col-md-8 col-sm-9 text-center">
+																		<br><br>
+																		<div class="progress">
+																			<div class="progress-bar" role="progressbar" style="width: <%= autoEval.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= autoEval.calificacion %> Ptos</b></div>
+																		</div>
+																	</div>					
+																</div>
+															</div>
+														</div>
+														<br>
+													</div>
+
+													<!--Si el Usuario selccionado tiene cargo 2 (JefeSubor)-->
+													<%if(User.cargoId == 2) {%>
 														<div class="col-md-12">
 															<div class="card">
 																<div class="card-body">
@@ -100,16 +125,16 @@
 																		<div class="col-lg-3 col-md-4 col-sm-3">
 																			<div class="card">
 																				<div class="card-body text-center">
-																					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-child" style="font-size: 30pt;"></i>
-																					<hr style="margin: 1px">
-																					<p><strong>AutoEvaluación</strong></p>
+																					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-users" style="font-size: 30pt;"></i>
+																					<hr style="margin: 2px">
+																					<p><strong>Segun Subordinados</strong></p>
 																				</div>
 																			</div>
 																		</div>
 																		<div class="col-lg-9 col-md-8 col-sm-9 text-center">
 																			<br><br>
 																			<div class="progress">
-																				<div class="progress-bar" role="progressbar" style="width: <%= autoEval.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= autoEval.calificacion %> Ptos</b></div>
+																				<div class="progress-bar" role="progressbar" style="width: <%= calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= calificacion %> Ptos</b></div>
 																			</div>
 																		</div>					
 																	</div>
@@ -117,7 +142,10 @@
 															</div>
 															<br>
 														</div>
+													<%}%>
 
+													<!--Si el Usuario selccionado tiene cargo 3 (Subordinado)-->
+													<% if(User.cargoId == 3) {%>
 														<div class="col-md-12">
 															<div class="card">
 																<div class="card-body">
