--- a/app/views/empleado/index.html
+++ b/app/views/empleado/index.html
@@ -34,66 +34,71 @@
 						</nav>
 						<!--=======FIN MIGAS DE PAN=========-->				
 					</div>
-
-					<div class="col-md-3">
-						<% if(Observacion && Observacion.length > 0) {%>
-							<!-- Default dropright button -->
-							<div class="btn-group dropright d-flex justify-content-center">
-							  	<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							    Observaciones <span class="badge badge-light"><%= Observacion.length %></span>
-							  	</button>
-							  	<div class="dropdown-menu">
-							  		<% for(let i = 0; i < Observacion.length; i ++) {%>
-								  		<a class="dropdown-item" href="/dashboard/observaciones/<%- Observacion[i].id %>">
-								  			<%- Observacion[i].evaluacion.nombre %>
-								  		</a>
-							  		<%}%>
-								</div>
+					
+					<!--info izquierdo-->
+					<div class="col-sm-12 col-md-12 col-lg-3">
+						<div class="row">
+							<!--Notificador de Observaciones-->
+							<div class="col-sm-12 col-md-12 col-lg-12">
+								<% if(Observacion && Observacion.length > 0) {%>
+									<!-- Default dropright button -->
+									<div class="btn-group dropright d-flex justify-content-center">
+									  	<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									    Observaciones <span class="badge badge-light"><%= Observacion.length %></span>
+									  	</button>
+									  	<div class="dropdown-menu">
+									  		<% for(let i = 0; i < Observacion.length; i ++) {%>
+										  		<a class="dropdown-item" href="/dashboard/observaciones/<%- Observacion[i].id %>">
+										  			<%- Observacion[i].evaluacion.nombre %>
+										  		</a>
+									  		<%}%>
+										</div>
+									</div>
+								<%}%>
 							</div>
 
-							<!--
-							<a class="btn btn-primary btn-block" href="/dashboard/observaciones">
-							  	Observaciones <span class="badge badge-light"><%= Observacion.length %></span>
-							</a>
-						-->
-						<%}%>
-						
-						<br>
-
-						<div class="card">
-						  	<div class="card-header">
-						    	Datos Personales:
-						  	</div>
-						  
-						  	<div class="card-body">
-						    	<div class="form-group">
-						    		<p><b>Nombre: </b><%= Usuario.nombre %></p>
-						    		<p><b>Apellido: </b><%= Usuario.apellido %></p>
-						    		<p><b>Nucleo: </b><%= Usuario.nucleo.nombre %></p>
-						    		<p><b>Unidad: </b><%= Usuario.unidad.nombre %></p>
-						    	</div>
-						  	</div>
+							<!--Datos del Inicio de Sesion-->
+							<div class="col-sm-6 col-md-6 col-lg-12">
+								<div class="card">
+								  	<div class="card-header">
+								    	Datos Personales:
+								  	</div>
+								  
+								  	<div class="card-body">
+								    	<div class="form-group">
+								    		<p><b>Nombre: </b><%= Usuario.nombre %></p>
+								    		<p><b>Apellido: </b><%= Usuario.apellido %></p>
+								    		<p><b>Nucleo: </b><%= Usuario.nucleo.nombre %></p>
+								    		<p><b>Unidad: </b><%= Usuario.unidad.nombre %></p>
+								    	</div>
+								  	</div>
+								</div>
+								<br>
+							</div>
+							
+							<!--Como Evaluar-->
+							<div class="col-sm-6 col-md-6 col-lg-12">
+								<div class="card">
+								  	<div class="card-header">
+								    	¿Sabes como Evaluar?
+								  	</div>
+								  
+								  	<div class="card-body">
+								    	<div class="form-group">
+								    		<p><b>Nombre: </b><%= Usuario.nombre %></p>
+								    		<p><b>Apellido: </b><%= Usuario.apellido %></p>
+								    		<p><b>Nucleo: </b><%= Usuario.nucleo.nombre %></p>
+								    		<p><b>Unidad: </b><%= Usuario.unidad.nombre %></p>
+								    	</div>
+								  	</div>
+								</div>
+							</div>
 						</div>
-
 						<br>
-
-						<div class="card">
-						  	<div class="card-header">
-						    	¿Sabes como Evaluar?
-						  	</div>
-						  
-						  	<div class="card-body">
-						    	<div class="form-group">
-						    		<p><b>Nombre: </b><%= Usuario.nombre %></p>
-						    		<p><b>Apellido: </b><%= Usuario.apellido %></p>
-						    		<p><b>Nucleo: </b><%= Usuario.nucleo.nombre %></p>
-						    		<p><b>Unidad: </b><%= Usuario.unidad.nombre %></p>
-						    	</div>
-						  	</div>
-						</div>
 					</div>
-
-					<div class="col-md-9">
+					
+					<!--Contenido-->
+					<div class="col-sm-12 col-md-12 col-lg-9">
 						<!--=======mensaje de alerta==========-->
 						<% if(message == false) {%>
 
@@ -117,6 +122,87 @@
 							<div class="card-body">
 								<h3>Evaluaciones Pendientes</h3>
 								<hr>
+								<table class="table">
+									<thead>
+									    <tr>
+									      	<th scope="col">Nombre de Eval</th>
+									      	<th scope="col">Fecha I</th>
+									      	<th scope="col">Fecha F</th>
+									      	<th scope="col">Acción</th>
+									    </tr>
+									</thead>
+									<tbody>
+										<%for(let i = 0; i < Evaluacion.length; i ++) {%>
+											<tr>
+												<td>
+													<p><%- Evaluacion[i].nombre %></p>
+												</td>
+												<td>
+													<p><%- Evaluacion[i].fecha_i.getDate() %>/<%- Evaluacion[i].fecha_i.getMonth() + 1%>/<%- Evaluacion[i].fecha_i.getFullYear() %></p>
+												</td>
+												<td>
+													<p><%- Evaluacion[i].fecha_f.getDate() %>/<%- Evaluacion[i].fecha_f.getMonth() + 1%>/<%- Evaluacion[i].fecha_f.getFullYear() %></p>
+												</td>
+												<td>
+													<a href="/dashboard/eval/<%- Evaluacion[i].id %>" class="btn btn-primary">Ver</a>
+												</td>
+											</tr>
+										<%}%>
+									</tbody>
+								</table>
+							</div>
+						</div>
+
+						<!--<div class="card">
+							<div class="card-body">
+								<h3>Tipo de Evaluaciones</h3>
+								<hr>
+								<div class="row">
+									<!--AutoEvaluacion
+									<div class="col-md-3 text-center">
+										<a href="" class="btn btn-outline-primary" style="width: 90%">
+											<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-child" style="font-size: 30pt;"></i>
+											<hr style="margin: 1px">
+											<p><strong>AutoEvaluación</strong></p>
+										</a>
+									</div>
+
+									<!--CoEvaluacion
+									<div class="col-md-3 text-center">
+										<a href="" class="btn btn-outline-success" style="width: 90%">
+											<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-users" style="font-size: 30pt;"></i>
+											<hr style="margin: 2px">
+											<p><strong>CoEvaluación</strong></p>
+										</a>
+									</div>
+
+									<!--Evaluacion al Jefe
+									<div class="col-md-3 text-center">
+										<a href="" class="btn btn-outline-secondary" style="width: 90%">
+											<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-users" style="font-size: 30pt;"></i>
+											<hr style="margin: 2px">
+											<p><strong>Según Subordinados</strong></p>
+										</a>
+									</div>
+
+									<!--Evaluacion a Subordinados
+									<div class="col-md-3 text-center">
+										<a href="" class="btn btn-outline-dark" style="width: 90%">
+											<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-secret" style="font-size: 30pt;"></i>
+											<hr style="margin: 1px">
+											<p><strong>Según Jefe</strong></p>
+										</a>
+									</div>
+								</div>
+								
+							</div>
+						</div>-->
+						
+						<!--
+						<div class="card">
+							<div class="card-body">
+								<h3>Evaluaciones Pendientes</h3>
+								<hr>
 								<% if(evaluacionUsuario != 0) {%>			
 									<table class="table">
 									  	<thead>
@@ -129,7 +215,7 @@
 									  	</thead>
 									  	<tbody>
 									  		<% var fechaActual = new Date() %>
-									  		<!--BUSQUEDA PARA IR COMPARANDO CEDULAS E IMPRIMIR LOS NOMBRES Y APELLIDOS DE LOS USUARIOS A SER EVALUADOS-->
+									  		<!--BUSQUEDA PARA IR COMPARANDO CEDULAS E IMPRIMIR LOS NOMBRES Y APELLIDOS DE LOS USUARIOS A SER EVALUADOS
 											<% for(var i = 0; i < evaluacionUsuario.length; i ++) {%>
 												<% if(Usuario.cargoId == 2 || Usuario.cargoId == 3) {%>
 												  	<tr>
@@ -154,7 +240,7 @@
 
 															<input type="hidden" name="fecha_f" id="fecha_f" value="<%=evaluacionUsuario[i].evaluacion.fecha_f%>">
 
-															<!--<a href="/dashboard/evaluacion/<%=evaluacionUsuario[i].evaluacionId%>/u/<%=evaluacionUsuario[i].usuarioCedula%>/ue/<%=evaluacionUsuario[i].usuarioEvaluado%>" id="evaluacion"><%=evaluacionUsuario[i].evaluacion.nombre%></a>-->
+															<!--<a href="/dashboard/evaluacion/<%=evaluacionUsuario[i].evaluacionId%>/u/<%=evaluacionUsuario[i].usuarioCedula%>/ue/<%=evaluacionUsuario[i].usuarioEvaluado%>" id="evaluacion"><%=evaluacionUsuario[i].evaluacion.nombre%></a>
 
 															<% if(evaluacionUsuario[i].evaluacion.fecha_i > fechaActual) {%>
 																<a onclick="verificarFecha('<%=evaluacionUsuario[i].evaluacion.fecha_i%>')" href="#"><%=evaluacionUsuario[i].evaluacion.nombre%></a>
@@ -165,7 +251,7 @@
 												  	</tr>
 												<%}%>
 											<%}%>
-											<!-- FIN -->
+											<!-- FIN 
 									  	</tbody>
 									</table>
 								<%} else {%>
@@ -173,6 +259,7 @@
 								<%}%>
 							</div>
 						</div>
+						-->
 						<br>
 					</div>
 				</div>
