--- a/app/views/empleado/evaluacion/examen/index.html
+++ b/app/views/empleado/evaluacion/examen/index.html
@@ -28,7 +28,7 @@
 			<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
 		</div>	
 
-		<%- include('../../partials/empleado/navbar.html') %>
+		<%- include('../../../partials/empleado/navbar.html') %>
 		
 		<div class="container-fluid">
 			<div class="row justify-content-md-center">
