--- a/app/views/empleado/evaluacion/evalAJefe.html
+++ b/app/views/empleado/evaluacion/evalAJefe.html
@@ -96,7 +96,7 @@
 									<%if(Usuario.cargoId == 2) {%>
 										<!--AutoEvaluacion-->
 										<div class="col-sm-6 col-md-6 col-lg-6 text-center">
-											<a href="/dashboard/eval/<%- autoEval.id %>" class="btn btn-outline-primary active" style="width: 90%">
+											<a href="/dashboard/eval/<%- parseInt(id) - 2 %>" class="btn btn-outline-primary" style="width: 90%">
 												<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-child" style="font-size: 30pt;"></i>
 												<hr style="margin: 1px">
 												<p><strong>AutoEvaluación</strong></p>
@@ -105,7 +105,7 @@
 
 										<!--Evaluacion a Subordinados-->
 										<div class="col-sm-6 col-md-6 col-lg-6 text-center">
-											<a href="/dashboard/eval-a-subord/<%- autoEval.id + 3 %>" class="btn btn-outline-dark" style="width: 90%">
+											<a href="/dashboard/eval-a-subord/<%- parseInt(id) + 1 %>" class="btn btn-outline-dark" style="width: 90%">
 												<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-secret" style="font-size: 30pt;"></i>
 												<hr style="margin: 1px">
 												<p><strong>Eval al Subor</strong></p>
@@ -114,7 +114,7 @@
 									<%} else if(Usuario.cargoId == 3) {%>
 										<!--AutoEvaluacion-->
 										<div class="col-sm-6 col-md-6 col-lg-4 text-center">
-											<a href="" class="btn btn-outline-primary active" style="width: 90%">
+											<a href="/dashboard/eval/<%- parseInt(id) - 2 %>" class="btn btn-outline-primary" style="width: 90%">
 												<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-child" style="font-size: 30pt;"></i>
 												<hr style="margin: 1px">
 												<p><strong>AutoEvaluación</strong></p>
@@ -123,7 +123,7 @@
 
 										<!--CoEvaluacion-->
 										<div class="col-sm-6 col-md-6 col-lg-4 text-center">
-											<a href="" class="btn btn-outline-success" style="width: 90%">
+											<a href="/dashboard/coEval/<%- parseInt(id) - 1 %>" class="btn btn-outline-success" style="width: 90%">
 												<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-users" style="font-size: 30pt;"></i>
 												<hr style="margin: 2px">
 												<p><strong>CoEvaluación</strong></p>
@@ -132,7 +132,7 @@
 
 										<!--Evaluacion al Jefe-->
 										<div class="col-sm-6 col-md-6 col-lg-4 text-center">
-											<a href="" class="btn btn-outline-secondary" style="width: 90%">
+											<a href="/dashboard/eval-a-jefe/<%- parseInt(id) %>" class="btn btn-outline-secondary active" style="width: 90%">
 												<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-users" style="font-size: 30pt;"></i>
 												<hr style="margin: 2px">
 												<p><strong>Evaluar al Jefe</strong></p>
@@ -148,7 +148,7 @@
 						<div class="card ">
 							<div class="card-body">
 								<div class="row">
-									<%if(autoEval) {%>
+									<%if(evalAJefe) {%>
 										<div class="col-sm-3 col-md-3 text-center">
 											<div class="card">
 												<div class="card-body">
@@ -158,7 +158,7 @@
 										</div>
 										
 										<div class="col-sm-9 col-md-9">
-											<a href="/dashboard/eval/<%- autoEval.id %>/u/<%- Usuario.cedula %>/ue/<%- Usuario.cedula %>" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
+											<a href="#" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
 											<hr style="margin: 7px">
 											<p>algo</p>
 										</div>
