Trabajando en mejorar el renderizado de las pruebas

--- a/app/views/empleado/evaluacion/evalASubord.html
+++ b/app/views/empleado/evaluacion/evalASubord.html
@@ -163,7 +163,7 @@
 															</div>
 															
 															<div class="col-sm-9 col-md-8 col-lg-9">
-																<a href="" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
+																<a href="/dashboard/eval/<%- Eval.evaluacionId  %>/u/<%- evalASubord[i].usuarioEvaluado %>" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
 																<hr style="margin: 7px">
 																<p>
 																	Evaluar A: 
