--- a/app/views/empleado/evaluacion/autoEval.html
+++ b/app/views/empleado/evaluacion/autoEval.html
@@ -158,7 +158,7 @@
 										</div>
 										
 										<div class="col-sm-9 col-md-9">
-											<a href="/dashboard/eval/<%- autoEval.evaluacionId %>/u/<%- Usuario.cedula %>/ue/<%- Usuario.cedula %>" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
+											<a href="/dashboard/eval/<%- dataEval.evaluacionId %>/u/<%- Usuario.cedula %>" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
 											<hr style="margin: 7px">
 											<p>algo</p>
 										</div>
