--- a/app/views/empleado/evaluacion/evalAJefe.html
+++ b/app/views/empleado/evaluacion/evalAJefe.html
@@ -158,7 +158,7 @@
 										</div>
 										
 										<div class="col-sm-9 col-md-9">
-											<a href="#" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
+											<a href="/dashboard/eval/<%- parseInt(id) %>/u/<%- evalAJefe.usuarioEvaluado %>" class="btn btn-primary btn-lg btn-block">Ejecutar</a>
 											<hr style="margin: 7px">
 											<p>algo</p>
 										</div>
