Arreglando pequeños Mensajes

--- a/app/views/president/historial/index.html
+++ b/app/views/president/historial/index.html
@@ -84,7 +84,7 @@
 												</tbody>
 											</table>
 										<%} else {%>
-											<h3>No Hay Evaluaciones Programadas</h3>
+											<h3 class="display-4 text-center">Ninguna</h3>
 										<%}%>									
 									</div>
 								</div>	
