--- a/app/views/empleado/index.html
+++ b/app/views/empleado/index.html
@@ -120,81 +120,80 @@
 							<div class="card-body">
 								<h3>Evaluaciones Pendientes</h3>
 								<hr>
-								<table class="table">
-									<thead>
-									    <tr>
-									      	<th scope="col">Nombre de Eval</th>
-									      	<th scope="col">Fecha I</th>
-									      	<th scope="col">Fecha F</th>
-									      	<th scope="col">Acción</th>
-									    </tr>
-									</thead>
-									<tbody>
-										<%for(let i = 0; i < Evaluacion.length; i ++) {%>
-											<tr>
-												<td>
-													<p><%- Evaluacion[i].nombre %></p>
-												</td>
-												<td>
-													<p><%- Evaluacion[i].fecha_i.getDate() %>/<%- Evaluacion[i].fecha_i.getMonth() + 1%>/<%- Evaluacion[i].fecha_i.getFullYear() %></p>
-												</td>
-												<td>
-													<p><%- Evaluacion[i].fecha_f.getDate() %>/<%- Evaluacion[i].fecha_f.getMonth() + 1%>/<%- Evaluacion[i].fecha_f.getFullYear() %></p>
-												</td>
-												<td>
-													<a href="/dashboard/eval/<%- Evaluacion[i].id %>" class="btn btn-primary" onclick="return verificarFecha('<%- Evaluacion[i].fecha_i %>');">Ver</a>
-												</td>
-											</tr>
-										<%}%>
-									</tbody>
-								</table>
+								<%if(Evaluacion && Evaluacion.length > 0) {%>
+									<table class="table">
+										<thead>
+										    <tr>
+										      	<th scope="col">Nombre de Eval</th>
+										      	<th scope="col">Fecha I</th>
+										      	<th scope="col">Fecha F</th>
+										      	<th scope="col">Acción</th>
+										    </tr>
+										</thead>
+										<tbody>
+											<%for(let i = 0; i < Evaluacion.length; i ++) {%>
+												<tr>
+													<td>
+														<p><%- Evaluacion[i].nombre %></p>
+													</td>
+													<td>
+														<p><%- Evaluacion[i].fecha_i.getDate() %>/<%- Evaluacion[i].fecha_i.getMonth() + 1%>/<%- Evaluacion[i].fecha_i.getFullYear() %></p>
+													</td>
+													<td>
+														<p><%- Evaluacion[i].fecha_f.getDate() %>/<%- Evaluacion[i].fecha_f.getMonth() + 1%>/<%- Evaluacion[i].fecha_f.getFullYear() %></p>
+													</td>
+													<td>
+														<a href="/dashboard/eval/<%- Evaluacion[i].id %>" class="btn btn-primary" onclick="return verificarFecha('<%- Evaluacion[i].fecha_i %>');">Ver</a>
+													</td>
+												</tr>
+											<%}%>
+										</tbody>
+									</table>	
+								<%} else {%>
+									<h3 class="display-4 text-center">Ninguna</h3>
+								<%}%>
 							</div>
 						</div>
 
-						<!--<div class="card">
-							<div class="card-body">
-								<h3>Tipo de Evaluaciones</h3>
-								<hr>
-								<div class="row">
-									<!--AutoEvaluacion
-									<div class="col-md-3 text-center">
-										<a href="" class="btn btn-outline-primary" style="width: 90%">
-											<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-child" style="font-size: 30pt;"></i>
-											<hr style="margin: 1px">
-											<p><strong>AutoEvaluación</strong></p>
-										</a>
-									</div>
+						<br>
 
-									<!--CoEvaluacion
-									<div class="col-md-3 text-center">
-										<a href="" class="btn btn-outline-success" style="width: 90%">
-											<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-users" style="font-size: 30pt;"></i>
-											<hr style="margin: 2px">
-											<p><strong>CoEvaluación</strong></p>
-										</a>
-									</div>
-
-									<!--Evaluacion al Jefe
-									<div class="col-md-3 text-center">
-										<a href="" class="btn btn-outline-secondary" style="width: 90%">
-											<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-users" style="font-size: 30pt;"></i>
-											<hr style="margin: 2px">
-											<p><strong>Según Subordinados</strong></p>
-										</a>
-									</div>
-
-									<!--Evaluacion a Subordinados
-									<div class="col-md-3 text-center">
-										<a href="" class="btn btn-outline-dark" style="width: 90%">
-											<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-secret" style="font-size: 30pt;"></i>
-											<hr style="margin: 1px">
-											<p><strong>Según Jefe</strong></p>
-										</a>
-									</div>
+						<%if(evalCulminada && evalCulminada.length > 0) {%>
+							<div class="card">
+								<div class="card-body">
+									<h3>Ultimas Evaluaciones Culminadas</h3>
+									<hr>
+									<table class="table">
+										<thead>
+										    <tr>
+										      	<th scope="col">Nombre de Eval</th>
+										      	<th scope="col">Fecha I</th>
+										      	<th scope="col">Fecha F</th>
+										      	<th scope="col">Acción</th>
+										    </tr>
+										</thead>
+										<tbody>
+											<%for(let i = 0; i < evalCulminada.length; i ++) {%>
+												<tr>
+													<td>
+														<p><%- evalCulminada[i].nombre %></p>
+													</td>
+													<td>
+														<p><%- evalCulminada[i].fecha_i.getDate() %>/<%- evalCulminada[i].fecha_i.getMonth() + 1%>/<%- evalCulminada[i].fecha_i.getFullYear() %></p>
+													</td>
+													<td>
+														<p><%- evalCulminada[i].fecha_f.getDate() %>/<%- evalCulminada[i].fecha_f.getMonth() + 1%>/<%- evalCulminada[i].fecha_f.getFullYear() %></p>
+													</td>
+													<td>
+														<a href="" class="btn btn-primary">Ver Resultados</a>
+													</td>
+												</tr>
+											<%}%>
+										</tbody>
+									</table>
 								</div>
-								
 							</div>
-						</div>-->
+						<%}%>
+						
 						
 						<!--
 						<div class="card">
